Adding: - index - contact - css - global.css - ts
Change:

Change all the image from png to jpg

--- a/index.html
+++ b/index.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Clara Debruyne</title>
+    <link rel="stylesheet" href="styles/homeStyle.css">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="icon" href="assets/img/logo/favicon.svg">
+    <script src="Client/homeMain.js" type="module"></script>
 </head>
 <body>
+    <header>
+        <img src="assets/img/logo/logoPurple.svg" alt="Logo de Clara Debruyne" loading="lazy">
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li>
+                <li>
+                    <div></div>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <div id="NameDiv" >
+            <img src="assets/img/logo/LogoWhite.svg" alt="Logo de Clara Debruyne" loading="lazy">
+            <div>
+                <h1>Clara Debruyne</h1>
+                <h2>Maquilleuse Professionnelle</h2>
+            </div>
+        </div>
+
+        <div id="caroussel">
+
+        </div>
+
+        <div id="book">
+            <h2>Book</h2>
+            <div id="photos">
+
+            </div>
+        </div>
+
+    </main>
 </body>
+
+<script src="js/homeViews.js"></script>
+
 </html>
