Add carroussel and anim on book

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         </div>
 
         <div id="caroussel">
+            <img id="prev" class="chevron" src="assets/img/icon/chevron_left.svg" alt="previous images">
+            <div id="photoV">
+                <img id="car1" src="" alt="" loading="lazy"/>
+            </div>
+            <div id="photoH">
+                <img id="car2" src="" alt="" loading="lazy"/>
+                <img id="car3" src="" alt="" loading="lazy"/>
+            </div>
+            <img id="next" class="chevron" src="assets/img/icon/chevron_right.svg" alt="next images">
 
         </div>
 
