--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" id="html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +32,7 @@
             <img src="assets/img/logo/LogoWhite.svg" alt="Logo de Clara Debruyne" loading="lazy">
             <div>
                 <h1>Clara Debruyne</h1>
-                <h2>Maquilleuse Professionnelle</h2>
+                <h2 id="professionalTitle">Maquilleuse Professionnelle</h2>
             </div>
         </div>
 
