Add meta Description

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/global.css">
     <link rel="icon" href="assets/img/logo/favicon.svg">
     <script src="Client/homeMain.js" type="module"></script>
+    <meta name="description" content="Clara Debruyne est une maquilleuse professionnelle, découvrez son portfolio ">
 </head>
 <body id="body">
     <header>
