Resolve canonical problem

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/homeStyle.css">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="icon" href="assets/img/logo/favicon.svg">
+    <link rel="canonical" href="https://www.clara-debruyne.fr/">
     <script src="Client/homeMain.js" type="module"></script>
     <meta name="description" content="Clara Debruyne est une maquilleuse professionnelle, découvrez son portfolio ">
 </head>
