Add linkedin Link

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 </div>
             </a>
 
-            <a href="https://www.linkedin.com/in/pierre-vanhove">
+            <a href="https://www.linkedin.com/in/clara-debruyne-854a083325">
                 <div class="button">
                     <img src="assets/img/icon/linkedin.svg" alt="linkedin Icon">
                     <p>@clara_debruyne</p>
